# Home-Position

prova_clik2/: CMakeLists.txt  package.xml
prova_clik2/include/prova_clik2/: quintic.h
prova_clik2/launch/: clik.launch.py
prova_clik2/src/: cartesian_trajectory.cpp  clik_node_test.cpp
